Слово "капча" заменено на "Введите цифры с картинки"

--- a/insurance/templates/calc/step3noreg.html
+++ b/insurance/templates/calc/step3noreg.html
@@ -130,7 +130,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Капча</td>
+                        <td>Введите цифры с картинки</td>
                         <td>
                             {{ form.captcha }}
                             {{ form.captcha.errors }}
