--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -257,7 +257,7 @@
                     <span class="table-error">{{ s1_form.wheel.errors }}</span>
                 </td>
                 <td class="visible-data second">
-                    <div class="visual"></div>
+                    <div class="visual wheel"></div>
                     {{ s1_form.wheel }}
                 </td>
             </tr>
