--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -312,7 +312,7 @@
 
             {% endif %}
 
-        <a href="{% url ncalc_step1 %}">Назад</a><br/>
+        <a class="back-button" href="{% url ncalc_step1 %}"><img src="/static/images/back_button.png" alt="назад" /></a><br/>
     </div>
 
 
