--- a/insurance/templates/calc/step3noreg.html
+++ b/insurance/templates/calc/step3noreg.html
@@ -21,124 +21,115 @@
         </ul>
 
         <div id="tabs-1">
-            <form action="" method="post">
-                <table>
-                    <tr>
-                        <th>Параметр</th>
-                        <th>Значение</th>
-                    </tr>
-                    <tr>
-                        <td>Тип полиса</td>
-                        <td>{{ data.insurance_type }}</td>
-                    </tr>
-                    <tr>
-                        <td>Марка автомобиля</td>
-                        <td>{{ data.mark }}</td>
-                    </tr>
-                    <tr>
-                        <td>Модель автомобиля</td>
-                        <td>{{ data.model }}</td>
-                    </tr>
-                    <tr>
-                        <td>Год выпуска</td>
-                        <td>{{ data.model_year }}</td>
-                    </tr>
-                    <tr>
-                        <td>Руль</td>
-                        <td>{{ data.wheel }}</td>
-                    </tr>
-                    <tr>
-                        <td>Мощность</td>
-                        <td>{{ data.power }}</td>
-                    </tr>
-                    <tr>
-                        <td>Стоимость</td>
-                        <td>{{ data.price }}</td>
-                    </tr>
-                    <tr>
-                        <td>Кредит</td>
-                        <td>{{ data.credit }}</td>
-                    </tr>
-                    <tr>
-                        <td>Регистрация собственника</td>
-                        <td>{{ data.city }}</td>
-                    </tr>
-                    <tr>
-                        <td>Возраст</td>
-                        <td>{{ data.age }}</td>
-                    </tr>
-                    <tr>
-                        <td>Стаж вождения</td>
-                        <td>{{ data.experience_driving }}</td>
-                    </tr>
-                    <tr>
-                        <td>Число водителей</td>
-                        <td>{{ data.dr_nr }}</td>
-                    </tr>
-                    <tr>
-                        <td>Страховщик</td>
-                        <td>{{ data.company }}</td>
-                    </tr>
-                    {% csrf_token %}
-                    <tr>
-                        <td>Фамилия</td>
-                        <td>
+            <div class="form-round-block">
+                <form action="" method="post">
+
+                    <table id="step3-data">
+                        <tr>
+                            <td>Тип полиса</td>
+                            <td>{{ data.insurance_type }}</td>
+                        </tr>
+                        <tr>
+                            <td>Марка автомобиля</td>
+                            <td>{{ data.mark }}</td>
+                        </tr>
+                        <tr>
+                            <td>Модель автомобиля</td>
+                            <td>{{ data.model }}</td>
+                        </tr>
+                        <tr>
+                            <td>Год выпуска</td>
+                            <td>{{ data.model_year }}</td>
+                        </tr>
+                        <tr>
+                            <td>Руль</td>
+                            <td>{{ data.wheel }}</td>
+                        </tr>
+                        <tr>
+                            <td>Мощность</td>
+                            <td>{{ data.power }}</td>
+                        </tr>
+                        <tr>
+                            <td>Стоимость</td>
+                            <td>{{ data.price }}</td>
+                        </tr>
+                        <tr>
+                            <td>Кредит</td>
+                            <td>{{ data.credit }}</td>
+                        </tr>
+                        <tr>
+                            <td>Регистрация собственника</td>
+                            <td>{{ data.city }}</td>
+                        </tr>
+                        <tr>
+                            <td>Возраст</td>
+                            <td>{{ data.age }}</td>
+                        </tr>
+                        <tr>
+                            <td>Стаж вождения</td>
+                            <td>{{ data.experience_driving }}</td>
+                        </tr>
+                        <tr>
+                            <td>Число водителей</td>
+                            <td>{{ data.dr_nr }}</td>
+                        </tr>
+                        <tr>
+                            <td>Страховщик</td>
+                            <td>{{ data.company }}</td>
+                        </tr>
+                    </table>
+
+                    <div id="user-login-data">
+                        <div class="data-block">
+                            <span>Фамилия:</span>
                             {{ form.last_name }}
                             {{ form.last_name.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Имя</td>
-                        <td>
-                            {{ form.first_name }}
-                            {{ form.first_name.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Отчество</td>
-                        <td>
-                            {{ form.middle_name }}
-                            {{ form.middle_name.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Телефон</td>
-                        <td>
-                            {{ form.phone }}
-                            {{ form.phone.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Адрес эл. почты</td>
-                        <td>
-                            {{ form.email }}
-                            {{ form.email.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Пароль</td>
-                        <td>
-                            {{ form.password1 }}
-                            {{ form.password1.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Пароль(еще раз)</td>
-                        <td>
-                            {{ form.password2 }}
-                            {{ form.password2.errors }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Введите цифры с картинки</td>
-                        <td>
-                            {{ form.captcha }}
-                            {{ form.captcha.errors }}
-                        </td>
-                    </tr>
-                </table>
-                <input type="submit" value="Заказать"/>
-            </form>
+                        </div>
+                        <div class="data-block">
+                                <span>Имя:</span>
+                                {{ form.first_name }}
+                                {{ form.first_name.errors }}
+                        </div>
+                        <div class="data-block">
+                                <span>Отчество:</span>
+                                {{ form.middle_name }}
+                                {{ form.middle_name.errors }}
+                        </div>
+                        <div class="data-block">
+                                <span>Телефон:</span>
+                                {{ form.phone }}
+                                {{ form.phone.errors }}
+                        </div>
+                        <div class="data-block">
+                                <span>Адрес эл-почты:</span>
+                                {{ form.email }}
+                                {{ form.email.errors }}
+                        </div>
+                        <div class="data-block">
+                                <span>Пароль:</span>
+                                {{ form.password1 }}
+                                {{ form.password1.errors }}
+                        </div>
+                        <div class="data-block">
+                                <span>Пароль еще раз:</span>
+                                {{ form.password2 }}
+                                {{ form.password2.errors }}
+                        </div>
+                    </div>
+
+                    {% csrf_token %}
+                    <table>
+                        <tr>
+                            <td>Введите цифры с картинки</td>
+                            <td>
+                                {{ form.captcha }}
+                                {{ form.captcha.errors }}
+                            </td>
+                        </tr>
+                    </table>
+                    <input type="image" src="/static/images/order_button_step3.png" value="Заказать"/>
+                </form>
+            </div>
         </div>
         <div id="tabs-2">осаго</div>
         <div id="tabs-3">дмс</div>
