--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -113,206 +113,173 @@
     </ul>
 
     <div id="tabs-1">
-        <div class="form-round-block">
-            <h2>Сортировать по:</h2>
+    <div class="form-round-block">
+        <h2>Сортировать по:</h2>
 
-            {% if msg %}
-                <b>Ошибка: {{ msg }}</b>
-            {% else %}
+        {% if msg %}
+            <b>Ошибка: {{ msg }}</b>
+        {% else %}
 
-                <div id="sort-table">
-                    <form action="" method="post" id="sorting">
-                        {% csrf_token %}
+            <div id="sort-table">
+                <form action="" method="post" id="sorting">
+                    {% csrf_token %}
 
-                        <table id="sort-parameters">
-                            <tr>
-                                <td>Цена</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_price }}</div>
-                                </td>
-                                <td>Расположение</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_accessibility }}</div>
-                                </td>
-                                <td>Быстрота покупки</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_service }}</div>
-                                </td>
-                                <td rowspan="2">Качество информационной
-                                    поддержки
-                                </td>
-                                <td rowspan="2">
-                                    <div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Условия страхования</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_insuranceterms }}</div>
-                                </td>
-                                <td>Популярность компании</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_reputation }}</div>
-                                </td>
-                                <td>Простота выплаты</td>
-                                <td>
-                                    <div class="style-checkbox">{{ s1_form.factor_easepay }}</div>
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </table>
-
-                        <a id="second-submit" href="#"><img src="/static/images/recount_button.png"
-                                                            alt="пересчитать"/></a>
-                </div>
-                </div>
-
-                <div class="form-round-block" id="economy-block">
-                    <h2>Экономия</h2>
-
-                    <p>Стандартная франшиза</p>
-
-
-                    <div id="franchize-container">
-                        <span id="min"></span>
-                        <span id="max"></span>
-
-                        <div id="franchize">
-                            {{ s1_form.franchise }}
-                        </div>
-                    </div>
-
-
-                    <p>Охранная система автомобиля</p>
-
-                    <div class="long-select">
-                        <span class="select-text"></span>
-                        {{ s1_form.burglar_alarm_group }}
-                    </div>
-
-                    <div class="long-select">
-                        <span class="select-text"></span>
-                        {{ s1_form.burglar_alarm_model }}
-                    </div>
-
-
-                    <p><input type="image" src="/static/images/update_button.png" value="Обновить"/></p>
-                </div>
-                </form>
-
-                <div id="result-table-step2">
-                    <!-- Beginning of Client Side Image Map -->
-                    <img id="map-image" src="/static/images/result_table_header.png" usemap="#result_table_header"
-                         border=0>
-
-                    <map id="map-table" name="result_table_header">
-                        <area shape="poly"
-                              coords="281,1,329,1,328,4,286,54,203,154,203,164,154,166,154,153,282,9,281,0,293,0"
-                              href="#" alt="Эвакуатор" title="">
-                        <area shape="poly"
-                              coords="250,165,249,157,258,144,376,10,377,5,375,0,332,0,201,158,209,162,211,166,253,165"
-                              href="#" alt="Авар. ком." title="">
-                        <area shape="poly"
-                              coords="298,164,295,159,320,130,414,22,425,8,424,0,378,0,251,155,252,163,300,164,300,164"
-                              href="#" alt="Без справок" title="">
-                        <area shape="poly"
-                              coords="347,165,345,158,365,133,421,70,463,22,475,5,472,0,428,0,296,154,299,165,347,165"
-                              href="#" alt="Сбор справок" title="">
-                        <area shape="poly"
-                              coords="398,166,395,161,395,153,443,102,480,57,517,17,522,8,522,0,478,1,426,63,342,160,353,163,396,163"
-                              href="#" alt="Агрегатная сумма" title="">
-                        <area shape="poly"
-                              coords="446,165,443,159,487,109,561,19,572,5,569,1,524,2,524,2,396,157,399,164,445,163,445,163"
-                              href="#" alt="Новое за старое" title="">
-                        <area shape="poly"
-                              coords="495,164,490,158,499,148,544,97,592,42,616,11,623,1,575,0,446,157,446,165,494,167,494,167"
-                              href="#" alt="Франшиза" title="">
-                        <area shape="poly"
-                              coords="543,164,541,157,557,132,587,101,613,73,639,41,657,24,668,8,668,0,623,1,525,117,492,157,494,163,507,165,540,165,541,165"
-                              href="#" alt="Форма выплаты" title="">
-                    </map>
-                    <!-- End of Client Side Image Map -->
-
-                    <div id="autodata-step1">
-                        Вы страхуете:
-                        <span>{{ data.mark }} {{ data.model }}</span>
-                        {{ data.model_year }} года, {{ data.price }} руб.
-                    </div>
-
-                    <table border="1">
-                        {% for comp in result.info %}
-                            <tr>
-                                <td>
-                                    <div class="company-data">
-                                        <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}"
-                                             alt="{{ comp.full_name }}"/>
-                                        <a class="conditions" href="#">
-                                            Условия
-                                            <div class="tooltip">
-                                                <span>- форма рекламы в сети Интернет, направленная на увеличение</span>
-                                                <img src="/static/images/tooltip_angle.png" alt=""/>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.Evacuator %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheEmergencyCommissioner %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-
-                                <td class="small">
-                                    {% if comp.parameters.PaymentWithoutInquiries %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.GatheringOfInquiries %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheModularInsuranceSum %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.NewForTheOld %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheObligatoryFranchize %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.AlternativenessOfFormsOfPayment %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-
-                                <td class="final-price">
-                                    <div class="ourscore">{{ comp.ourscore }}</div>
-                                    <div class="score">{{ comp.score }}</div>
-                                    <a class="order-button"
-                                       href="{% url ncalc_step3 comp.alias %}"></a>
-                                </td>
-                            </tr>
-                        {% endfor %}
+                    <table id="sort-parameters">
+                        <tr>
+                            <td>Цена</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_price }}</div>
+                            </td>
+                            <td>Расположение</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_accessibility }}</div>
+                            </td>
+                            <td>Быстрота покупки</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_service }}</div>
+                            </td>
+                            <td rowspan="2">Качество информационной
+                                поддержки
+                            </td>
+                            <td rowspan="2">
+                                <div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Условия страхования</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_insuranceterms }}</div>
+                            </td>
+                            <td>Популярность компании</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_reputation }}</div>
+                            </td>
+                            <td>Простота выплаты</td>
+                            <td>
+                                <div class="style-checkbox">{{ s1_form.factor_easepay }}</div>
+                            </td>
+                            <td></td>
+                            <td></td>
+                        </tr>
                     </table>
+                    <a id="second-submit" href="#"><img src="/static/images/recount_button.png" alt="пересчитать"/></a>
+            </div>
+        </div>
+
+            <div class="form-round-block" id="economy-block">
+                <h2>Экономия</h2>
+
+                <p>Стандартная франшиза</p>
+
+
+                <div id="franchize-container">
+                    <span id="min"></span>
+                    <span id="max"></span>
+
+                    <div id="franchize">
+                        {{ s1_form.franchise }}
+                    </div>
                 </div>
 
 
-            {% endif %}
+                <p>Охранная система автомобиля</p>
 
-        <a class="back-button" href="{% url ncalc_step1 %}"><img src="/static/images/back_button.png" alt="назад" /></a><br/>
+                <div class="long-select">
+                    <span class="select-text"></span>
+                    {{ s1_form.burglar_alarm_group }}
+                </div>
+
+                <div class="long-select">
+                    <span class="select-text"></span>
+                    {{ s1_form.burglar_alarm_model }}
+                </div>
+
+
+                <p><input type="image" src="/static/images/update_button.png" value="Обновить"/></p>
+            </div>
+            </form>
+
+            <div id="result-table-step2">
+                <!-- Beginning of Client Side Image Map -->
+                <img id="map-image" src="/static/images/result_table_header.png" usemap="#result_table_header"
+                     border=0>
+
+                <map id="map-table" name="result_table_header">
+                      <area shape="poly" coords="202,164,201,161,203,154,214,141,240,113,267,83,296,50,320,20,330,9,330,5,329,3,329,2,385,2,385,5,385,9,383,13,351,50,306,102,260,155,258,160,258,162,259,164,259,166,203,166,202,164,202,159" href="#"  alt="Эвакуатор" title="">
+                      <area shape="poly" coords="320,166,316,163,317,158,321,153,336,135,357,113,381,85,407,54,427,30,442,13,445,7,443,1,387,1,388,4,386,12,369,28,333,73,300,111,276,138,259,156,259,161,261,165,319,165" href="#"  alt="Авар. ком." title="">
+                      <area shape="poly" coords="321,165,318,162,319,156,434,24,446,10,447,4,443,1,501,1,502,4,500,9,498,11,501,4,502,8,498,14,374,158,374,161,375,165,376,166,319,166" href="#"  alt="Без справок" title="">
+                      <area shape="poly" coords="431,162,433,157,554,17,560,11,561,7,560,4,560,1,504,2,504,4,504,6,503,11,378,155,376,158,376,162,376,165,434,165" href="#"  alt="Сбор справок" title="">
+                      <area shape="poly" coords="493,164,491,160,492,154,505,143,552,86,588,45,614,14,617,9,617,4,617,1,562,2,562,6,558,11,443,148,434,157,433,162,433,165,491,165" href="#"  alt="Тех. помощь" title="">
+                </map>
+                <!-- End of Client Side Image Map -->
+
+                <div id="autodata-step1">
+                    Вы страхуете:
+                    <span>{{ data.mark }} {{ data.model }}</span>
+                    {{ data.model_year }} года, {{ data.price }} руб.
+                </div>
+
+                <table border="1">
+                    {% for comp in result.info %}
+                        <tr>
+                            <td>
+                                {{forloop.counter}}
+                            </td>
+                            <td>
+                                <div class="company-data">
+                                    <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}"
+                                         alt="{{ comp.full_name }}"/>
+                                    <a class="conditions" href="#">
+                                        Условия
+                                        <div class="tooltip">
+                                            <span>- форма рекламы в сети Интернет, направленная на увеличение</span>
+                                            <img src="/static/images/tooltip_angle.png" alt=""/>
+                                        </div>
+                                    </a>
+                                </div>
+                            </td>
+                            <td class="small">
+                                {% if comp.parameters.Evacuator %}
+                                    <img src="/static/images/yes_circle.png" alt="да"/>
+                                {% endif %}
+                            </td>
+                            <td class="small">
+                                {% if comp.parameters.TheEmergencyCommissioner %}
+                                    <img src="/static/images/yes_circle.png" alt="да"/>
+                                {% endif %}
+                            </td>
+
+                            <td class="small">
+                                {% if comp.parameters.PaymentWithoutInquiries %}
+                                    <img src="/static/images/yes_circle.png" alt="да"/>
+                                {% endif %}
+                            </td>
+                            <td class="small">
+                                {% if comp.parameters.GatheringOfInquiries %}
+                                    <img src="/static/images/yes_circle.png" alt="да"/>
+                                {% endif %}
+                            </td>
+                            <td class="small">
+                               <!-- столбик "Тех. помомщь" -->
+                                    <img src="/static/images/yes_circle.png" alt="да"/>
+                            </td>
+
+                            <td class="final-price">
+                                <div class="ourscore">{{ comp.ourscore }}</div>
+                                <div class="score">{{ comp.score }}</div>
+                                <a class="order-button"
+                                   href="{% url ncalc_step3 comp.alias %}"></a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+
+
+        {% endif %}
+
+    <a class="back-button" href="{% url ncalc_step1 %}"><img src="/static/images/back_button.png"
+                                                             alt="назад"/></a><br/>
     </div>
 
 
