добавлены табы для четвертого шага

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -8,6 +8,8 @@
 
     <script>
         $(document).ready(function() {
+            $("#step4-tabs").tabs();
+
             var step = 1;
             $('.next').show();
             if (window.location.hash) {
@@ -71,10 +73,19 @@
     <div id="tabs-1">
     <div class="form-round-block clear-float">
 
+    <div id="step4-tabs">
+    <ul>
+        <li><a href="#inner-tab1">Водители</a></li>
+        <li><a href="#inner-tab2">Автомобиль</a></li>
+        <li><a href="#inner-tab3">Доставка</a></li>
+    </ul>
+
     <form action="" id="test" method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
-    <div class="steps" id="step1">
+
+    <!-- first tab-->
+    <div id="inner-tab1">
         <p>
             {{ form.first_name.label }}
             {{ form.first_name }}
@@ -213,7 +224,9 @@
             {{ form.live_flat.label }}
             {{ form.live_flat }}</p>
     </div>
-    <div id="step2" class="steps" style="display:none;">
+
+    <!-- second tab-->
+    <div id="inner-tab2">
         <p>
             {{ form.vin.label }}
             {{ form.vin }}
@@ -294,7 +307,9 @@
             {{ form.owner_sex }}
         </p>
     </div>
-    <div id="step3" class="steps" style="display:none;">
+
+    <!-- third tab-->
+    <div id="inner-tab3">
         <p>
             {{ form.date.label }}
             {{ form.date }}
@@ -356,8 +371,6 @@
         </p>
         <input type="submit" value="Заказать"/>
     </div>
-    <a href="#" style="display:none" class="prew">Назад</a>
-    <a href="#" class="next"/> Далее </a>
     </form>
     </div>
     </div>
